[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Base/Connector/Connector.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="Connector" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Connector_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Connector_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Connector_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Connector_mouse_exited"]
